* NEWS configure.in libvirt.spec.in doc/* include/libvirt/libvirt.h:   release of 0.6.1 * po/*: rebuilt * AUTHORS: updated to list new contributors Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -62,6 +62,8 @@ Patches have also been contributed by:
   Ryota Ozaki          <ozaki.ryota@gmail.com>
   James Morris         <jmorris@namei.org>
   Daniel J Walsh       <dwalsh@redhat.com>
+  Maximilian Wilhelm   <max@rfc2324.org>
+  Ryota Ozaki           <ozaki.ryota@gmail.com>
 
   [....send patches to get your name here....]
 
