--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Mar 12 21:13:40 CET 2009 Daniel Veillard <veilard@redhat.com>
+
+	* src/storage_conf.c: fix storage pool mode parsing, and refactoring
+	  patch by Ryota Ozaki
+
 Wed Mar 11 14:42:24 CET 2009 Daniel Veillard <veilard@redhat.com>
 
 	* src/xs_internal.c: fix xen events handling problem (Dan Berrange)
