Added ac97 soundcard to RNG schema & tests (Pritesh Kothari)

--- a/AUTHORS
+++ b/AUTHORS
@@ -63,7 +63,8 @@ Patches have also been contributed by:
   James Morris         <jmorris@namei.org>
   Daniel J Walsh       <dwalsh@redhat.com>
   Maximilian Wilhelm   <max@rfc2324.org>
-  Ryota Ozaki           <ozaki.ryota@gmail.com>
+  Ryota Ozaki          <ozaki.ryota@gmail.com>
+  Pritesh Kothari      <Pritesh.Kothari@Sun.COM>
 
   [....send patches to get your name here....]
 
