--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Mar 16 13:15:11 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/qemu_driver.c: Initialize security driver after config parsing
+
 Mon Mar 16 13:12:59 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/test.c: Fix test driver 'save' deadlock
