--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Mar 17 11:58:58 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/remote_internal.c: remove file descriptors leak
+
 Mon Mar 16 13:17:05 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/libvirt.c: Don't allow readonly connections to dump secure xml.
