use posix_fallocate() to allocate diskspace faster * src/libvirt_private.syms src/storage_backend_fs.c src/util.c   src/util.h: use posix_fallocate() on supported systems to   allocate diskspace faster, patches by Amit Shah Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -65,6 +65,7 @@ Patches have also been contributed by:
   Maximilian Wilhelm   <max@rfc2324.org>
   Ryota Ozaki          <ozaki.ryota@gmail.com>
   Pritesh Kothari      <Pritesh.Kothari@Sun.COM>
+  Amit Shah            <amit.shah@redhat.com>
 
   [....send patches to get your name here....]
 
