--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Mar 20 21:43:57 CET 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/util.c: flag unused parameters, by Maximilian Wilhelm
+
 Fri Mar 20 13:16:01 CET 2009 Daniel Veillard <veillard@redhat.com>
 
 	* src/libvirt_private.syms src/storage_backend_fs.c src/util.c
