Add support for a non-template filesystem root. (Florian Vichot)

--- a/AUTHORS
+++ b/AUTHORS
@@ -66,6 +66,7 @@ Patches have also been contributed by:
   Ryota Ozaki          <ozaki.ryota@gmail.com>
   Pritesh Kothari      <Pritesh.Kothari@Sun.COM>
   Amit Shah            <amit.shah@redhat.com>
+  Florian Vichot      <florian.vichot@diateam.net>
 
   [....send patches to get your name here....]
 
