--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 Tue Mar 24 10:51:22 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
 
+	* src/Makefile.maint: Include 'CHECK: ' prefix when printing
+	name of each syntax-check rule that is run
+
+Tue Mar 24 10:51:22 GMT 2009 Daniel P. Berrange <berrange@redhat.com>
+
 	* src/openvz_conf.c, src/openvz_conf.h, src/openvz_driver.c: Add
 	support for a non-template filesystem root. (Florian Vichot)
 
