--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Tue Mar 31 17:40:00 CEST 2009 Chris Lalancette <clalance@redhat.com>
+	* src/lxc_driver.c, src/openvz_driver.c, src/qemu_driver.c,
+	src/remote_internal.c, src/test.c, src/uml_driver.c, src/xen_unified.c,
+	src/driver.h, src/libvirt.c, src/proxy_internal.c, src/xen_inotify.c,
+	src/xen_internal.c, src/xen_unified.h, src/xend_internal.c,
+	src/xm_internal.c, src/xs_internal.c: Convert all drivers to use
+	old-style struct initializers; this makes a handy built-in TODO list
+	for each driver.  Also rip out the internal getURI method; it was never
+	used by any of the drivers, and was buggy to boot.
+
 Tue Mar 31 14:44:16 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* libvirt.spec.in: better modularization of the spec file,
