--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
+Wed Apr  1 10:55:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/node_device.c: Fix error message for missing node device
+	during lookup by name
+
 Wed Apr  1 10:54:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
-	* src/qemu-driver.c: Fix URI check in migration
+	* src/qemu_driver.c: Fix URI check in migration
 
 Wed Apr  1 10:50:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
