--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+Wed Apr  1 16:50:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
+
+	SCSI HBA storage pool implementation (Dave Allan)
+	* configure.in: Add flag for SCSI storage pool support
+	* po/POTFILES.in: Add storage_backend_scsi.c
+	* src/Makefile.am: Add new SCSI storage backend
+	* src/storage_backend.c: Support for SCSI pool type
+	* src/storage_backend_iscsi.c: Refactor to re-use logic from
+	SCSI pool backend
+	* src/storage_backend_scsi.c, src/storage_backend_scsi.h:
+	Generic pool for Linux SCSI HBAs (or things which look
+	like SCSI HBAs)
+	* src/storage_conf.c, src/storage_conf.h: Add logic for
+	SCSI storage pool XML parsing options
+
 Wed Apr  1 11:40:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	* configure.in: Check for libsasl.so as well as libsasl2.so
