--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Apr  2 11:52:59 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* po/*: updated brazilian, spanish, polish and simplified chinese
+	  translations, and regenerated
+
 Wed Apr  1 16:50:22 BST 2009 Daniel P. Berrange <berrange@redhat.com>
 
 	SCSI HBA storage pool implementation (Dave Allan)
