* docs/*: start cleanup/revamp of architecture docs daniel

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr  2 14:00:14 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* docs/*: start cleanup/revamp of architecture docs
+
 Thu Apr  2 11:52:59 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* po/*: updated brazilian, spanish, polish and simplified chinese
