--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Apr  3 10:15:01 EDT 2009 Cole Robinson <crobinso@redhat.com>
+
+	* src/storage_driver.c: Refresh volume alloc/capacity when dumping XML.
+
 Fri Apr  3 10:13:38 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/test.c: Fix test driver domain restore return value.
