--- a/AUTHORS
+++ b/AUTHORS
@@ -66,7 +66,8 @@ Patches have also been contributed by:
   Ryota Ozaki          <ozaki.ryota@gmail.com>
   Pritesh Kothari      <Pritesh.Kothari@Sun.COM>
   Amit Shah            <amit.shah@redhat.com>
-  Florian Vichot      <florian.vichot@diateam.net>
+  Florian Vichot       <florian.vichot@diateam.net>
+  Takahashi Tomohiro   <takatom@jp.fujitsu.com>
 
   [....send patches to get your name here....]
 
