--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Apr  3 16:47:22 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* configure.in libvirt.spec.in NEWS docs/*: release of 0.6.2
+	* po/*: Gujarati and Polish updates, rebuild
+	* AUTHORS: add one missing
+
 Fri Apr  3 10:16:55 EDT 2009 Cole Robinson <crobinso@redhat.com>
 
 	* src/storage_backend.c src/storage_backend_scsi.c:
