Adding Serge E. Hallyn to the authors list, Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -68,6 +68,7 @@ Patches have also been contributed by:
   Amit Shah            <amit.shah@redhat.com>
   Florian Vichot       <florian.vichot@diateam.net>
   Takahashi Tomohiro   <takatom@jp.fujitsu.com>
+  Serge E. Hallyn      <serue@us.ibm.com>
 
   [....send patches to get your name here....]
 
