--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Apr 15 22:08:12 CEST 2009 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: fix for virsh ttyconsole return value bug #495954
+
 Wed Apr 15 21:59:09 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* drvlxc.html.in drvlxc.html: some examples from Serge Hallyn
