Fix lxc syntax-check failure
Fixes:

 CHECK: avoid_if_before_free
 src/lxc_container.c: if (oldroot) VIR_FREE(oldroot)
 src/lxc_container.c: if (newroot) VIR_FREE(newroot)
 Makefile.maint: found useless "if" before "free" above

and:

 src/lxc_container.c:317:
 Makefile.maint: found trailing blank(s)

Signed-off-by: Mark McLoughlin <markmc@redhat.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Apr 16 14:05:28 GMT 2009 Mark McLoughlin <markmc@redhat.com>
+
+	* src/lxc_container.c: syntax-check fixes
+
 Wed Apr 15 22:40:50 CEST 2009 Daniel Veillard <veillard@redhat.com>
 
 	* docs/Makefile.am docs/api.html docs/api.html.in docs/archdomain.html
